# rainybook

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  auto-fix.sh  ci-build.sh  clean-disk.sh  coverage.sh  deny.toml  deps-check.sh  local-build.sh  outdated.sh  perf-build.sh  profile.sh
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: rainybook.yml
benches/: data.rs  orderbook.rs
docs/: observer-pattern.md  perf_guide.md  profiling.md
examples/: inspect_dbn.rs  simple_orderbook.rs  validate_mbp.rs
src/: generators.rs  lib.rs  main.rs
src/orderbook/: book.rs  events.rs  mbo.rs  mbp.rs  mod.rs  tradestream.rs
