[package]
name = "rainybook"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.53", features = ["derive"] }
serde = "1.0.228"
time = "0.3.44"
toml = "0.9.10"
tracing = "0.1.44"
tracing-subscriber = "0.3"
rand = "0.9.2"
thiserror = "2.0.17"

[profile.dev]
# Full debug info for better debugger experience
debug = 2  # or "full"
incremental = true
opt-level = 0  # No optimizations in dev mode

# Keep dependencies optimized (faster builds)
[profile.dev.package."*"]
opt-level = 1
debug = "line-tables-only"

[profile.release]
debug = false
# Strip symbols for even smaller release artifacts.
# Replace "debuginfo" with "symbols" for maximum shrinkage.
strip = "debuginfo"
# opt-level = 3

