[package]
name = "rainybook"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
polars = { version = ">=0.52,<2", default-features = false, features = [
  "lazy",
  "csv",
  "parquet",
  "temporal",
  "timezones",
  "dtype-slim",
  "dtype-i8",
  "fmt",
]}
clap = { version = "4.5.54", features = ["derive"] }
serde = "1.0.228"
tracing = "0.1.44"
tracing-subscriber = "0.3"
thiserror = "2.0.17"
strum = { version = "0.27.2", features = ["derive"] }
dbn = "0.46.0"
num_enum = "0.7.5"

[profile.dev]
# Full debug info for better debugger experience
debug = 2  # or "full"
incremental = true
opt-level = 0  # No optimizations in dev mode

# Keep dependencies optimized (faster builds)
[profile.dev.package."*"]
opt-level = 1
debug = "line-tables-only"

[profile.release]
debug = false
# Strip symbols for even smaller release artifacts.
# Replace "debuginfo" with "symbols" for maximum shrinkage.
strip = "debuginfo"

[dev-dependencies]
criterion = "0.8.1"
rand = ">=0.9.2,<2"
rand_chacha = ">=0.9,<2"
rand_distr = ">=0.5.1,<2"

[[bench]]
name = "orderbook"
harness = false

[features]
polars_perf = ["polars/performant"]
polars_all_dtypes = ["polars/dtype-full"]